@@ -35,6 +35,11 @@ Where "NUMBER" is the bug number.
    without displaying them (hidden text) (Camillo Lugaresi).
  - Fixed opening URL irc://NetWork/#channel not joining the channel
    [1362155].
+ - Fixed the nickname label becoming small when you're marked Back
+   if you have "Small tabs" turned on.
+ - The textevents GUI has been re-written to use GtkTreeView.
+ - Randomized DNS lookups on Mac OS X on hostnames that return
+   multiple IP numbers (SG / CL).
  - 
  - 
  - Perl:
